--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     9521 Treffen am Ossiacher See<br>
                     Austria</p>
                 <h3>Jak dojechać</h3>
-                <p>Hotel znajduje się 15 minut jazdy od jeziora Ossiacher See, w pobliżu wyciągu narciarskiego
+                <p>Hotel znajduje się bezpośrednio na stoku.
                     Gerlitzen.</p>
             </div>
             <div id="map">
